<?xml version="1.0"?>
<package format="2">
  <name>darknet_vendor</name>
  <version>0.1.0</version>
  <description>CMake wrapper around darknet, an open source neural network framework.</description>

  <author email="sloretz@openrobotics.org">Shane Loretz</author>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <depend>libopencv-dev</depend>

  <!-- nvidia-cuda-dev is just the libraries to link against -->
  <exec_depend>nvidia-cuda-dev</exec_depend>

  <!-- nvidia-cuda includes nvidia-cuda-dev plus the nvcc compiler -->
  <build_depend>nvidia-cuda</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
